--- a/CONTACTUS.html
+++ b/CONTACTUS.html
@@ -13,9 +13,12 @@
     }
 </style>
 <body>
-   <h4>SHIVANSH SHUKLA</h4>
-   <P>72 SAKET NAGAT T.R GWALIOR 474002</P>
-   <P>CONTACT NUMBER - 8305635770</P>
+   <h4>Name: UTKARSH KUMAR</h4>
+   <P>Address: Chaunn Morh, Sanjarpur, Azamgarh, Uttar Pradesh</P>
+    <p>Pincode: 223227</p>
+   <P>CONTACT NUMBER - 7088800700</P>
+    <P>Email-id- utkarsh70888@gmail.com</P>
+    
 
 </body>
 </html>
