--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
         <div class="nav">
 
-            <li class="a1"><a href="Iindex.html">HOME</a></li>
-            <li class="a1"><a href="aboutus.html">ABOUT US</a></li>
-            <li class="a1"><a href="CONTACTUS.html">CONTACT US</a></li>
-            <li class="a1"><a href="KNOWMORE.html">KNOW MORE</a>
+            <li class="a1"><a href="Iindex.html" target="blank">HOME</a></li>
+            <li class="a1"><a href="aboutus.html" target="blank">ABOUT US</a></li>
+            <li class="a1"><a href="CONTACTUS.html" target="blank">CONTACT US</a></li>
+            <li class="a1"><a href="KNOWMORE.html" target="blank">KNOW MORE</a>
             </li>
         </div>
         <div class="we">
