--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="nav">
 
-            <li class="a1"><a href="Iindex.html" target="blank">HOME</a></li>
+            <li class="a1"><a href="#" target="blank">HOME</a></li>
             <li class="a1"><a href="aboutus.html" target="blank">ABOUT US</a></li>
             <li class="a1"><a href="CONTACTUS.html" target="blank">CONTACT US</a></li>
             <li class="a1"><a href="KNOWMORE.html" target="blank">KNOW MORE</a>
